--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,6 @@
-# Dependencies
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-package-lock.json
-yarn.lock
-
-# Environment
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.log
-
-# Editor directories and files
-.idea
-.vscode
-*.swp
-*.swo
-
-# OS
+node_modules
+dist
 .DS_Store
-Thumbs.db
-
-# Production build
-dist/
-build/
-
-# Replit specific
-.replit
-replit.nix
-.config/
+server/public
+vite.config.ts.*
+*.tar.gz
